--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to my blog application</h1>
+<p><%=link_to 'Go to blog', articles_path %></p>
+<p><%=link_to 'About', about_path %></p>
