change bootstrap & design

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>Welcome to my blog application</h1>
-<p><%=link_to 'Go to blog', articles_path %></p>
-<p><%=link_to 'About', about_path %></p>
+<div class="jumbotron center">
+    <h1>My Blog</h1>
+    <%=link_to 'Sign up now', '#', class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
