--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit existing articles</h1>
+<h1 align="center">Edit existing articles</h1>
 
 <% if @article.errors.any? %>
     <h2>The following errors prevented the article from getting created</h2>
@@ -9,18 +9,4 @@
     </ul>
 <% end%>
 
-<%=form_for(@article) do |f| %>
-    <p>
-        <%=f.label :title %><br>
-        <%=f.text_field :title %>
-    </p>
-    <p>
-        <%=f.label :description %><br>
-        <%=f.text_area :description %>
-    </p>
-    <p>
-        <%=f.submit %>
-    </p>
-<% end %>
-
-<%=link_to "Back to articles listing", articles_path %>
+<%= render "form" %>
