--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,13 @@
 .btn-xlarge:hover {
     background-image: linear-gradient(45deg, #709dff 50%, #b0c9ff 100%);
 }
+.description {
+    margin-top:0;
+}
+.article-actions {
+    border-top:1px solid #eaeaea;
+    padding-top:5px;
+}
 footer {
     margin-top:45px;
     padding-top:5px;
