--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,6 +74,10 @@
     padding-top:15px;
     padding-bottom:15px;
 }
+.article-meta-details  {
+    border-top:1px solid #eaeaea;
+    margin-top:15px;
+}
 footer {
     margin-top:45px;
     padding-top:5px;
